test/error/lexer_files/unterminated_string.st
x := "this string not finish.
